# MaskColorChecker

./: .gitignore  CMakeLists.txt  README.md
fltk/: MaskColorCheckerGUI.cxx  MaskColorCheckerGUI.fl  MaskColorCheckerGUI.h  invalidParameters.xpm  validParameters.xpm
include/: Canvas.h  Program.h  icon.xpm
src/: Canvas.cpp  Program.cpp  main.cpp
